More formatting, added gif

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -22,7 +22,7 @@ $link-color: #ff33ff;
 body {
     font-family: $body-font-family;
     color: $primary;
-    padding: 45px;
+    padding: 45px, 75px;
 }
 
 h1, h2, h3, h4, h5, h6 {
