--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -41,3 +41,11 @@ a {
 a:hover {
     color: $primary;
 }
+
+.bottom-image {
+    display: block;
+    margin: 0 auto;
+    position: fixed;
+    bottom: 20px;
+    width: 200px;
+}
