--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -23,6 +23,7 @@ body {
     font-family: $body-font-family;
     color: $primary;
     padding: 45px;
+    padding-bottom: 200px;
 }
 
 h1, h2, h3, h4, h5, h6 {
