even more padding

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -45,7 +45,7 @@ a:hover {
 .bottom-image {
     display: block;
     margin: 0 auto;
-    position: fixed;
+    //position: fixed;
     bottom: 20px;
     width: 200px;
     left: 50%;
