Even more image mods

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -44,7 +44,7 @@ a:hover {
 
 .bottom-image {
     display: block;
-    margin: 0 auto;
+    margin: auto;
     justify-content: center;
     bottom: 20px;
     width: 200px;
